--- a/index.html
+++ b/index.html
@@ -21,37 +21,43 @@
                 <div class="row">
                     <div class="col-md-4" id="player1">
                         <h1 class="title">Player 1:</h1>
-                        <h4 id="p1-wins">Wins: 0</h4>
-                        <h4 id="p1-losses">Losses: 0</h4>
-                        <h4 id="p1-ties">Ties: 0</h4>
+                        <h4>Wins: <span id="p1-wins">0</span></h4>
+                        <h4>Losses: <span id="p1-losses">0</span></h4>
+                        <h4>Ties: <span id="p1-ties">0</span></h4>
                     </div>
                     <div class="col-md-4">
                         <h1 class="title">Intructions:</h1>
-                        <p id ="instructions">Choose Rock, Paper, or Scissors</p>
+                        <p id ="line1"></p>
+                        <p id="line2"></p>
                     </div>
                     <div class="col-md-4" id="player2">
                         <h1 class="title">Player 2:</h1>
-                        <h4 id="p2-wins">Wins: 0</h4>
-                        <h4 id="p2-losses">Losses: 0</h4>
-                        <h4 id="p2-ties">Ties: 0</h4>
+                        <h4>Wins: <span id="p2-wins">0</span></h4>
+                        <h4>Losses: <span id="p2-losses">0</span></h4>
+                        <h4>Ties: <span id="p2-ties">0</span></h4>
                     </div>
                 </div>
             </div>
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <img id="rock" src="assets/images/rock.jpg" alt="rock">
+                        <img class="choice" id="rock" src="assets/images/rock.jpg" alt="rock">
                         
                     </div>
                     <div class="col-md-4">
-                        <img id ="paper" src="assets/images/paper.jpg" alt="paper">
+                        <img class="choice" id ="paper" src="assets/images/paper.jpg" alt="paper">
                     </div>
                     <div class="col-md-4">
-                        <img  id="scissors" src="assets/images/scissors.jpg" alt="scissors">
+                        <img class="choice"  id="scissors" src="assets/images/scissors.jpg" alt="scissors">
                     </div>
                 </div>
             </div>
     </div>
-    
+<script
+src="https://code.jquery.com/jquery-3.3.1.min.js"
+integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+crossorigin="anonymous"></script>
+<script src="https://www.gstatic.com/firebasejs/5.5.2/firebase.js"></script>   
+<script src="assets/game.js"></script>
 </body>
 </html>
